Remove everything below hero

--- a/themes/hugo-profile/layouts/partials/sections/footer/recentBlogPosts.html
+++ b/themes/hugo-profile/layouts/partials/sections/footer/recentBlogPosts.html
@@ -1,4 +1,4 @@
-<div class="container py-3" id="recent-posts">
+<!-- <div class="container py-3" id="recent-posts">
     {{ if .Site.Params.footer.recentPosts.enable | default false }}
     {{ $recentPostsPath := .Site.Params.footer.recentPosts.path | default "blogs" }}
     {{ $recentPostsCount := .Site.Params.footer.recentPosts.count | default 3 }}
@@ -34,4 +34,4 @@
         {{ end }}
     </div>
     {{ end }}
-</div>
+</div> -->
