--- a/themes/hugo-profile/layouts/partials/sections/footer/index.html
+++ b/themes/hugo-profile/layouts/partials/sections/footer/index.html
@@ -1,10 +1,10 @@
-<footer>
+<!-- <footer> -->
     <!-- Recent blog posts -->
-    {{- partial "sections/footer/recentBlogPosts.html" . -}}
+    <!-- {{- partial "sections/footer/recentBlogPosts.html" . -}} -->
 
     <!-- Social Icons -->
-    {{- partial "sections/footer/socialNetwork.html" . -}}
+    <!-- {{- partial "sections/footer/socialNetwork.html" . -}} -->
 
     <!-- Copyright -->
-    {{- partial "sections/footer/copyright.html" . -}}
-</footer>
+    <!-- {{- partial "sections/footer/copyright.html" . -}} -->
+<!-- </footer> -->
