remove hamburger icon

--- a/themes/hugo-profile/layouts/_default/about.html
+++ b/themes/hugo-profile/layouts/_default/about.html
@@ -60,9 +60,9 @@
             </div>
         </div>
     </div>
-    <button class="p-2 px-3" onclick="topFunction()" id="topScroll">
+    <!-- <button class="p-2 px-3" onclick="topFunction()" id="topScroll">
         <i class="fas fa-angle-up"></i>
-    </button>
+    </button> -->
 </section>
 
 <script>
