--- a/themes/hugo-profile/static/css/index.css
+++ b/themes/hugo-profile/static/css/index.css
@@ -121,15 +121,15 @@ header .navbar.animate {
     transition: box-shadow 0.3s;
 }
 
-#hero .image img:hover {
+/* #hero .image img:hover {
     cursor: pointer;
 }
 
 #hero .image.animate img:hover {
     box-shadow: 0 0 11px rgb(15 80 100 / 20%);
     filter: contrast(1.2);
-    cursor: pointer;
-}
+    cursor: pointer; 
+}*/
 
 #hero a.btn.social-icon {
     color: var(--primary-color) !important;
