--- a/themes/hugo-profile/layouts/partials/sections/footer/index.html
+++ b/themes/hugo-profile/layouts/partials/sections/footer/index.html
@@ -1,4 +1,4 @@
-<!-- <footer> -->
+<footer>
     <!-- Recent blog posts -->
     <!-- {{- partial "sections/footer/recentBlogPosts.html" . -}} -->
 
@@ -7,4 +7,4 @@
 
     <!-- Copyright -->
     <!-- {{- partial "sections/footer/copyright.html" . -}} -->
-<!-- </footer> -->
+</footer>
