--- a/themes/hugo-profile/layouts/_default/baseof.html
+++ b/themes/hugo-profile/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
   </title>
 </head>
 
-<body class="light" onload="loading()">
+<body class="light">
   <!-- javascripts -->
   <!-- <script src="/js/jquery-3.6.0.min.js"></script> -->
 
