--- a/themes/hugo-profile/layouts/partials/scripts.html
+++ b/themes/hugo-profile/layouts/partials/scripts.html
@@ -22,7 +22,7 @@
         document.body.classList.add('dark');
     } else if (localStorage.getItem("pref-theme") === "light") {
         document.body.classList.remove('dark')
-    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+    } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark');
     }
 
@@ -49,22 +49,8 @@
 </script>
 {{- end }}
 
-<script>
-    let loadingIcons;
-
-    function loading() {
-        myVar = setTimeout(showPage, 100);
-    }
-
-    function showPage() {
-        try{
-            document.getElementById("loading-icons").style.display = "block";
-        } catch(err) {}
-    }
-</script>
-
 {{ if not (.Site.Params.navbar.disableSearch | default false) }}
-    <script src="/js/search.js"></script>
+    <script src="{{ .Site.Params.staticPath }}/js/search.js"></script>
 {{ end }}
 
 
@@ -97,4 +83,8 @@
     cl.responsive();
 </script>
 
+{{ end }}
+
+{{ if (.Site.Params.contact.formspree.enable | default false) }}
+<script src="{{ .Site.Params.staticPath }}/js/contact.js"></script>
 {{ end }}
