--- a/themes/hugo-profile/static/css/index.css
+++ b/themes/hugo-profile/static/css/index.css
@@ -72,10 +72,9 @@ header .navbar.animate {
 /* hero */
 
 #hero {
-    min-height: 70vh;
+    min-height: 100vh;
     line-height: 2rem;
     max-width: 100%;
-    overflow: auto;
 }
 #hero .content.animate {
     animation: fade-left 1s ease-out;
@@ -122,15 +121,15 @@ header .navbar.animate {
     transition: box-shadow 0.3s;
 }
 
-/* #hero .image img:hover {
+#hero .image img:hover {
     cursor: pointer;
 }
 
 #hero .image.animate img:hover {
     box-shadow: 0 0 11px rgb(15 80 100 / 20%);
     filter: contrast(1.2);
-    cursor: pointer; 
-}*/
+    cursor: pointer;
+}
 
 #hero a.btn.social-icon {
     color: var(--primary-color) !important;
@@ -194,6 +193,8 @@ header .navbar.animate {
 #hero .hero-content > a:hover::after, #hero .hero-content > a:focus::after, #hero .hero-content > a:active::after {
     width: 100%;
 }
+
+
 
 /* about me */
 #about h3 {
@@ -518,7 +519,6 @@ header .navbar.animate {
 
 #contact h3 {
     color: var(--text-secondary-color) !important;
-    font-family: "roboto";
 }
 
 #contact .btn {
@@ -528,7 +528,6 @@ header .navbar.animate {
     border-color: var(--primary-color) !important;
     background-color: var(--secondary-color) !important;
     color: var(--text-color) !important;
-    font-family: "roboto";
 }
 
 #contact .btn:hover {
@@ -537,4 +536,41 @@ header .navbar.animate {
 
 #contact .btn:focus {
     box-shadow: none !important;
+}
+
+#contact form .form-control {
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+    border-radius: .7rem;
+    border: 1px solid var(--text-secondary-color);
+    box-shadow: 0px 8px 56px rgb(15 80 100 / 5%);
+}
+
+#contact-form-status {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+#contact-form-status svg {
+    height: 18px;
+    width: 18px;
+}
+
+#contact-form-status button {
+    border-radius: 50%;
+    border: none;
+    background-color: white;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+    box-shadow: 0px 8px 56px rgb(15 80 100 / 5%);
+    font-size: .6rem !important;
+}
+
+#contact-form-status .alert {
+    border-radius: 0.5rem;
+    box-shadow: 0px 8px 56px rgb(15 80 100 / 5%);
+    padding: .5rem 1rem;
 }
