--- a/themes/hugo-profile/layouts/partials/head.html
+++ b/themes/hugo-profile/layouts/partials/head.html
@@ -1,4 +1,9 @@
 <meta charset="UTF-8">
+
+<!-- GTM Code -->
+{{- if eq .Site.Params.gtm_datalayer "basic"}}{{ partial "gtm-datalayer.html" . }}{{ end }}
+{{ if .Site.Params.gtm_id}}{{ partial "gtm-js.html" . }}{{ end }}
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
